--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="col-md-6 col-12">
                     <h2>Stay Healthy Rain or Shine</h2>
 
-                    <p class="advice-para">The weather affects more than just your wardrobe—it can have a big impact on your health too! Understanding how to adapt to changing conditions can help you stay healthy and comfortable year-round.</p>
+                    <p class="advice-para text-dark mb-3">The weather affects more than just your wardrobe—it can have a big impact on your health too! Understanding how to adapt to changing conditions can help you stay healthy and comfortable year-round.</p>
 
                     <button class="btn btn-primary">Seek advice</button>
                 </div>
@@ -139,7 +139,7 @@
             <div class="row ">
                 <div class="col text-center">
                     <img src="images\worlddark.svg" width="90em"alt="world">
-                    <p>Tailored health advise for every season</p>
+                    <p class="text-dark">Tailored health advise for every season</p>
                     <div class="col d-inline">
                       <button class="btn btn-outline-secondary">Learn More</button>
                     </div>
@@ -150,12 +150,12 @@
 
                 <div class="col text-center">
                     <img src="images/persondark.svg" width="90em" alt="person">
-                    <p>Personalised recommendation just for you</p>
+                    <p class="text-dark">Personalised recommendation just for you</p>
                 </div>
 
                 <div class="col text-center">
                     <img src="images/handshakedark.svg" width="90em" alt="handshake">
-                    <p>Weather-based health insights you can trust </p>
+                    <p class="text-dark">Weather-based health insights you can trust </p>
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
                         <img class="card-img-top" src="images\sunny-day-article-2.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Health advice for sunny days</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -201,7 +201,7 @@
                         <img class="card-img-top" src="images\snowy-days-article-2.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Health advice for snowy days</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -211,7 +211,7 @@
                         <img class="card-img-top" src="images\rainy-days-article.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Health advice for rainy days</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
@@ -221,7 +221,7 @@
                         <img class="card-img-top" src="images\windy-days-article.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Health advice for windy days</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text text-dark">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                       </div>
