--- a/risk.html
+++ b/risk.html
@@ -57,11 +57,13 @@
 
       <!-- risk-assesment-section -->
        <div class="risk-assesment-section">
-        <div class="container">
-          <div class="row mt-5">
+        <div class="container min-vh-100 d-flex justify-content-center align-items-center">
+          <div class="row">
             <h2 class="text-center">Book a risk assesment</h2>
-            <div class="container m-4 navbar-shadow p-5 rounded">
+            <div class="container m-4 navbar-shadow p-5 rounded bg-white">
               <form>
+
+                
                 <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
                   <input type="text" class="form-control" id="name-input">
