--- a/risk.html
+++ b/risk.html
@@ -59,7 +59,7 @@
        <div class="risk-assesment-section">
         <div class="container min-vh-100 d-flex justify-content-center align-items-center">
           <div class="row">
-            <h2 class="text-center">Book a risk assesment</h2>
+            <h2 class="text-center text-light">Book a risk assesment</h2>
             <div class="container m-4 navbar-shadow p-5 rounded bg-white">
               <form>
 
