--- a/weather.html
+++ b/weather.html
@@ -62,7 +62,7 @@
         <div id="weather-container">
           <h2>Get weather info!</h2>
           <input type="text" id="city" placeholder="enter city">
-          <button id="button-search" class="btn btn-light mt-3" onclick="getWeather()">Search</button>
+          <button class="btn btn-light mt-3" onclick="getWeather()">Search</button>
 
           <img id="weather-icon" alt="Weather Icon">
 
